--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -1,15 +1,22 @@
 <!-- resources/templates/login.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>로그인</title>
 </head>
 <body>
-    <form action="/login" method="post">
-        <input type="text" name="username" placeholder="아이디">
-        <input type="password" name="password" placeholder="비밀번호">
-        <input type="submit" value="로그인">
+    <h1>로그인</h1>
+
+    <!-- Thymeleaf form 등록 -->
+    <form th:action="@{/login}" method="post">
+        <label for="username">아이디:</label>
+        <input type="text" id="username" name="username" placeholder="아이디" required>
+
+        <label for="password">비밀번호:</label>
+        <input type="password" id="password" name="password" placeholder="비밀번호" required>
+
+        <button type="submit">로그인</button>
     </form>
 </body>
 </html>
