--- a/backend/src/main/resources/templates/home.mustache
+++ b/backend/src/main/resources/templates/home.mustache
@@ -82,7 +82,7 @@
             <div class="user-info">
                 <!-- If user is logged in, display user info; otherwise, display Sign In and Sign Up buttons -->
                 <!-- Example: Logged in -->
-                <span>Welcome, {{id}}! <a href="#">Logout</a></span>
+                <span>Welcome, {{id}}! <a href="/logout">Logout</a></span>
 
                 <!-- Example: Not logged in -->
                 <!-- <button onclick="location.href='#'">Sign In</button>
